@@ -9,27 +9,29 @@ import com.insidious.plugin.factory.testcase.util.ClassTypeUtils;
 import com.insidious.plugin.factory.testcase.writer.TestCaseWriter;
 import com.insidious.plugin.pojo.MethodCallExpression;
 import com.insidious.plugin.pojo.Parameter;
+import com.insidious.plugin.pojo.frameworks.JsonFramework;
 import com.insidious.plugin.ui.TestCaseGenerationConfiguration;
 import com.insidious.plugin.util.LoggerUtil;
 import com.intellij.openapi.diagnostic.Logger;
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.TypeName;
-import org.jetbrains.annotations.Nullable;
 import org.objectweb.asm.Opcodes;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class MethodCallExpressionFactory {
 
     //    public static final Parameter MockitoClass;
     //    public static final Parameter AssertClass;
-    public static final Parameter GsonClass;
+//    public static final Parameter GsonClass;
     private static final Logger logger = LoggerUtil.getInstance(MethodCallExpressionFactory.class);
 
     static {
 //        MockitoClass = makeParameter("Mockito", "org.mockito.Mockito");
 //        AssertClass = makeParameter("Assert", "org.junit.Assert");
-        GsonClass = makeParameter("gson", "com.google.gson.Gson");
+//        GsonClass = makeParameter("gson", "com.google.gson.Gson");
     }
 
     public static Parameter makeParameter(String name, String type) {
@@ -55,6 +57,10 @@ public class MethodCallExpressionFactory {
 
     public static Expression StringExpression(String s) {
         return new StringExpression(s);
+    }
+
+    public static Expression NullExpression() {
+        return new NullExpression();
     }
 
     public static MethodCallExpression MockitoWhen(
@@ -92,16 +98,16 @@ public class MethodCallExpressionFactory {
             callSubject = mainSubject;
         }
         MethodCallExpression callExpression = MethodCallExpression("when", callSubject,
-                VariableContainer.from(List.of(whenExpression)), null
+                VariableContainer.from(Collections.singletonList(whenExpression)), null
         );
 //        callExpression.setStaticCall(true);
         return callExpression;
 
     }
 
-    public static MethodCallExpression MockClass(ClassName targetClassname, TestCaseGenerationConfiguration configuration) {
+    public static MethodCallExpression MockClass(TypeName targetClassname, TestCaseGenerationConfiguration configuration) {
 
-        String param1 = targetClassname.canonicalName();
+        String param1 = targetClassname.toString();
 
         Parameter whenExpression = new Parameter();
         whenExpression.setValue(param1);
@@ -111,7 +117,7 @@ public class MethodCallExpressionFactory {
 
         MethodCallExpression mock = new MethodCallExpression("mock",
                 configuration.getMockFramework()
-                        .getMockClassParameter(), List.of(whenExpression), null, 0);
+                        .getMockClassParameter(), Collections.singletonList(whenExpression), null, 0);
         mock.setStaticCall(true);
         mock.setMethodAccess(Opcodes.ACC_PUBLIC);
         return mock;
@@ -129,16 +135,11 @@ public class MethodCallExpressionFactory {
 
 
         MethodCallExpression mockStatic = new MethodCallExpression("mockStatic",
-                configuration.getMockFramework()
-                        .getMockClassParameter(), List.of(whenExpression), null, 0);
+                configuration.getMockFramework().getMockClassParameter(),
+                Collections.singletonList(whenExpression), null, 0);
         mockStatic.setMethodAccess(Opcodes.ACC_PUBLIC);
         mockStatic.setStaticCall(true);
         return mockStatic;
-
-    }
-
-    public static MethodCallExpression InitNoArgsConstructor(Parameter targetClassname) {
-        return new MethodCallExpression("<init>", null, List.of(), targetClassname, 0);
 
     }
 
@@ -146,9 +147,9 @@ public class MethodCallExpressionFactory {
         List<Parameter> valueToReturn;
         if (returnValue.isPrimitiveType()) {
             returnValue.clearNames();
-            valueToReturn = List.of(returnValue);
+            valueToReturn = Collections.singletonList(returnValue);
         } else {
-            valueToReturn = List.of(returnValue);
+            valueToReturn = Collections.singletonList(returnValue);
         }
         MethodCallExpression thenReturn = MethodCallExpression(
                 "thenReturn", null, VariableContainer.from(valueToReturn), null);
@@ -162,8 +163,7 @@ public class MethodCallExpressionFactory {
     public static Expression MockitoThenThrow(Parameter exceptionValue) {
 
         MethodCallExpression thenThrow = MethodCallExpression("thenThrow", null,
-                VariableContainer.from(List.of(exceptionValue)),
-                null);
+                VariableContainer.from(Collections.singletonList(exceptionValue)), null);
         thenThrow.setMethodAccess(Opcodes.ACC_PUBLIC);
         return thenThrow;
 
@@ -171,9 +171,10 @@ public class MethodCallExpressionFactory {
 //        return parameter;
     }
 
-    public static Expression ToJson(Parameter object) {
-        MethodCallExpression toJson = MethodCallExpression("toJson", GsonClass,
-                VariableContainer.from(List.of(object)),
+    public static Expression ToJson(Parameter object, TestCaseGenerationConfiguration testConfiguration) {
+        JsonFramework jsonFramework = testConfiguration.getJsonFramework();
+        MethodCallExpression toJson = MethodCallExpression(jsonFramework.getToJsonMethodName(),
+                jsonFramework.getInstance(), VariableContainer.from(Collections.singletonList(object)),
                 null);
         toJson.setMethodAccess(Opcodes.ACC_PUBLIC);
 
@@ -185,11 +186,9 @@ public class MethodCallExpressionFactory {
             Parameter returnSubjectInstanceName,
             TestCaseGenerationConfiguration testConfiguration) {
         MethodCallExpression assertEquals = MethodCallExpression(
-                testConfiguration.getTestFramework()
-                        .AssertEqualMethod(),
-                testConfiguration.getTestFramework()
-                        .AssertClassParameter(),
-                VariableContainer.from(List.of(returnValue, returnSubjectInstanceName)), null
+                testConfiguration.getTestFramework().AssertEqualMethod(),
+                testConfiguration.getTestFramework().AssertClassParameter(),
+                VariableContainer.from(Arrays.asList(returnValue, returnSubjectInstanceName)), null
         );
         assertEquals.setStaticCall(true);
         assertEquals.setMethodAccess(Opcodes.ACC_PUBLIC);
@@ -201,11 +200,9 @@ public class MethodCallExpressionFactory {
             Parameter returnSubjectInstanceName,
             TestCaseGenerationConfiguration testConfiguration) {
         MethodCallExpression assertArrayEquals = MethodCallExpression(
-                testConfiguration.getTestFramework()
-                        .AssertArrayEqualsMethod(),
-                testConfiguration.getTestFramework()
-                        .AssertClassParameter(),
-                VariableContainer.from(List.of(returnValue, returnSubjectInstanceName)), null
+                testConfiguration.getTestFramework().AssertArrayEqualsMethod(),
+                testConfiguration.getTestFramework().AssertClassParameter(),
+                VariableContainer.from(Arrays.asList(returnValue, returnSubjectInstanceName)), null
         );
 
         assertArrayEquals.setStaticCall(true);
@@ -214,14 +211,11 @@ public class MethodCallExpressionFactory {
     }
 
     public static Expression MockitoAssertFalse(
-            Parameter paramInstanceName,
-            TestCaseGenerationConfiguration testConfiguration) {
+            Parameter paramInstanceName, TestCaseGenerationConfiguration testConfiguration) {
         MethodCallExpression assertFalse = MethodCallExpression(
-                testConfiguration.getTestFramework()
-                        .AssertFalseMethod(),
-                testConfiguration.getTestFramework()
-                        .AssertClassParameter(),
-                VariableContainer.from(List.of(paramInstanceName)), null
+                testConfiguration.getTestFramework().AssertFalseMethod(),
+                testConfiguration.getTestFramework().AssertClassParameter(),
+                VariableContainer.from(Collections.singletonList(paramInstanceName)), null
         );
 
         assertFalse.setStaticCall(true);
@@ -229,17 +223,18 @@ public class MethodCallExpressionFactory {
         return assertFalse;
     }
 
-    public static MethodCallExpression FromJson(Parameter object) {
-        MethodCallExpression fromJson = MethodCallExpression("fromJson", GsonClass,
-                VariableContainer.from(List.of(object)), null);
+    public static MethodCallExpression FromJson(Parameter object, TestCaseGenerationConfiguration testConfiguration) {
+        JsonFramework jsonFramework = testConfiguration.getJsonFramework();
+        MethodCallExpression fromJson = MethodCallExpression(jsonFramework.getFromJsonMethodName(),
+                jsonFramework.getInstance(),
+                VariableContainer.from(Collections.singletonList(object)), null);
         fromJson.setMethodAccess(Opcodes.ACC_PUBLIC);
         return fromJson;
     }
 
     public static MethodCallExpression FromJsonFetchedFromFile(Parameter object) {
         MethodCallExpression valueOf = MethodCallExpression("ValueOf", null,
-                VariableContainer.from(List.of(object)),
-                null);
+                VariableContainer.from(Collections.singletonList(object)), null);
         valueOf.setStaticCall(true);
         valueOf.setMethodAccess(Opcodes.ACC_PUBLIC);
         return valueOf;
@@ -247,7 +242,7 @@ public class MethodCallExpressionFactory {
 
     public static Expression createEnumExpression(Parameter enumParam) {
 
-        @Nullable TypeName enumTypeName = ClassTypeUtils.createTypeFromNameString(
+        TypeName enumTypeName = ClassTypeUtils.createTypeFromNameString(
                 ClassTypeUtils.getJavaClassName(enumParam.getType()));
 
         String value = new String(enumParam.getProb()
@@ -263,9 +258,7 @@ public class MethodCallExpressionFactory {
                 .append(".")
                 .append(value);
 
-        PlainValueExpression enumExp = new PlainValueExpression(rhsExpressionBuilder.toString());
-
-        return enumExp;
+        return new PlainValueExpression(rhsExpressionBuilder.toString());
     }
 
     public static MethodCallExpression CloseStaticMock(Parameter object) {
@@ -274,7 +267,7 @@ public class MethodCallExpressionFactory {
 
         // TODO : need to add params ? do we need param inside close method of @AfterEach
         MethodCallExpression close = MethodCallExpression("close", object,
-                VariableContainer.from(List.of(closeExpression)),
+                VariableContainer.from(Collections.singletonList(closeExpression)),
                 null);
 
         close.setMethodAccess(Opcodes.ACC_PUBLIC);
