@@ -5,15 +5,13 @@ import com.j256.ormlite.field.DatabaseField;
 import com.j256.ormlite.table.DatabaseTable;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 
 @DatabaseTable(tableName = "test_candidate")
 public class TestCandidateMetadata {
-    @DatabaseField
-    @Deprecated
-    private String methodCallExpressions;
     @DatabaseField
     private String fields;
     @DatabaseField(index = true)
@@ -28,45 +26,6 @@ public class TestCandidateMetadata {
     private long exitProbeIndex;
     @DatabaseField
     private String variables;
-
-    public static TestCandidateMetadata FromTestCandidateMetadata(
-            com.insidious.plugin.factory.testcase.candidate.TestCandidateMetadata testCandidateMetadata) {
-        TestCandidateMetadata newCandidate = new TestCandidateMetadata();
-
-        StringBuilder callIds = new StringBuilder();
-
-        for (com.insidious.plugin.pojo.MethodCallExpression methodCallExpression : testCandidateMetadata.getCallsList()) {
-            callIds.append(methodCallExpression.getId())
-                    .append(",");
-        }
-
-        String s = callIds.toString();
-        if (s.length() > 0) {
-            newCandidate.setCallList(s.substring(0, s.length() - 1));
-        }
-
-        newCandidate.setFields(testCandidateMetadata.getFields()
-                .all()
-                .stream()
-                .map(com.insidious.plugin.pojo.Parameter::getValue)
-                .collect(Collectors.toList()));
-
-        if (testCandidateMetadata.getTestSubject() != null) {
-            newCandidate.setTestSubject(testCandidateMetadata.getTestSubject()
-                    .getValue());
-        }
-
-        newCandidate.setMainMethod(((com.insidious.plugin.pojo.MethodCallExpression)
-                testCandidateMetadata.getMainMethod()).getId());
-
-
-        newCandidate.setCallTimeNanoSecond(testCandidateMetadata.getCallTimeNanoSecond());
-        newCandidate.setEntryProbeIndex(Math.toIntExact(testCandidateMetadata.getEntryProbeIndex()));
-        newCandidate.setExitProbeIndex(Math.toIntExact(testCandidateMetadata.getExitProbeIndex()));
-
-
-        return newCandidate;
-    }
 
     public static com.insidious.plugin.factory.testcase.candidate.TestCandidateMetadata
     toTestCandidate(TestCandidateMetadata testCandidateMetadata) {
@@ -98,7 +57,7 @@ public class TestCandidateMetadata {
 
     public List<Long> getFields() {
         if (fields == null || fields.length() < 1) {
-            return List.of();
+            return Collections.emptyList();
         }
         return Arrays.stream(fields.split(","))
                 .map(Long::valueOf)
@@ -107,12 +66,6 @@ public class TestCandidateMetadata {
 
     public void setFields(List<Long> fields) {
         this.fields = Strings.join(fields, ",");
-    }
-
-
-    @Deprecated
-    public void setCallList(String callIds) {
-        this.methodCallExpressions = callIds;
     }
 
     public long getTestSubject() {
@@ -132,22 +85,11 @@ public class TestCandidateMetadata {
     }
 
 
-    @Deprecated
-    public List<Long> getCallsList() {
-        if (methodCallExpressions == null || methodCallExpressions.length() < 1) {
-            return List.of();
-        }
-        return Arrays.stream(methodCallExpressions.split(","))
-                .map(Long::valueOf)
-                .collect(Collectors.toList());
-    }
-
     @Override
     public String toString() {
         return "TCM[" + entryProbeIndex + " - " + exitProbeIndex + "]{" +
                 "mainMethod=" + mainMethod_id +
                 ", testSubject=" + testSubject_id +
-                ", methodCallExpressions=" + methodCallExpressions +
                 ", fields=" + fields +
                 ", callTimeNanoSecond=" + callTimeNanoSecond +
                 ", variables=" + variables +
